--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
                 <th class="text-success h3">Port #</th>
                 <th class="text-success h3">Protocol</th>
                 <th class="text-success h3">Description</th>
-                <th class="text-success h3">Info</th>
+                <th class="text-success h3">Additional Info</th>
             </tr>
         </thead>
         <tbody>
