--- a/home.html
+++ b/home.html
@@ -117,6 +117,6 @@
                 Mike Meyer's <a href="https://www.totalsem.com/store/all-in-one-comptia-a-certification-exam-guide-10th-ed-2019-objectives/" target="_blank">Book</a>
             </li>
         </ul> 
-    <p class="text-center">&copy; 2020</p>
+    <p class="text-center">2020<sup>&copy;</sup></p>
 </body>
 </html>
