Corrected spelling error in Mike Meyers' name

--- a/home.html
+++ b/home.html
@@ -111,12 +111,12 @@
     <p>Sources</p>
         <ul>
             <li>
-                Mike Meyer's Udemy <a href="https://www.udemy.com/course/new-comptia-a-2019-certification-1001-the-total-course/" target="_blank">Course</a>
+                Mike Meyers' Udemy <a href="https://www.udemy.com/course/new-comptia-a-2019-certification-1001-the-total-course/" target="_blank">Course</a>
             </li>
             <li>
-                Mike Meyer's <a href="https://www.totalsem.com/store/all-in-one-comptia-a-certification-exam-guide-10th-ed-2019-objectives/" target="_blank">Book</a>
+                Mike Meyers' <a href="https://www.totalsem.com/store/all-in-one-comptia-a-certification-exam-guide-10th-ed-2019-objectives/" target="_blank">Book</a>
             </li>
         </ul> 
-    <p class="text-center">2020<sup>&copy;</sup></p>
+    <p class="text-center">&copy; 2020</p>
 </body>
 </html>
